--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,13 @@ name = "MethodInspector"
 uuid = "b1dd13ee-3653-43d9-9a5b-1245bfcfc883"
 authors = ["Philip Tellis <philip.tellis@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1.6"
+
+[extras]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["InteractiveUtils", "Test"]
