--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,18 +10,19 @@ on:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-latest'
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        version:
-          - '1.10'
-          - '1.6'
-          - 'nightly'
-        os:
-          - ubuntu-latest
+        version: ['1.6', '^1']
+        experimental: [false]
         arch:
           - x64
+        include:
+          - version: 'nightly'
+            experimental: true
+            arch: x64
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
