--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - main
     tags: '*'
+  workflow_dispatch:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -15,7 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ['1.6', '^1']
+        version:
+          - 'release'
+          - 'lts'
+          - 'min'
         experimental: [false]
         arch:
           - x64
